fixed link color contrast for Workshops
This one slipped through. Updated padding on Workshops, too.

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -5,6 +5,10 @@ html {
     -webkit-font-smoothing: antialiased;
 }
 
+a {
+    color: $dark-gray;
+}
+
 p {
     color: #4b4f54;
     font-size: 1.1em; //**changed this**//
@@ -1180,6 +1184,7 @@ ARROWS THAT TRACK CURSOR
 
 .workshop-details {
     margin-top: 50px;
+    padding: 0 20px;
 }
 
 .workshop-description {
